[tool.poetry]
name = "aws-timestream-python-demo"
version = "0.1.0"
description = ""
authors = ["Ting Zhou <ztlevi.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.18"
numpy = "^1.22.3"
pdbpp = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
